# aws-c-sdkutils

./: CMakeLists.txt  README.md  builder.json  debug_test.c
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml
.github/workflows/: ci.yml  codecov.yml
cmake/: aws-c-sdkutils-config.cmake
compiler/: bdd-bytecoder.py  partition-bytecoder.py
include/aws/sdkutils/: aws_chunked_decoder.h  aws_profile.h  endpoints_bdd_engine.h  endpoints_rule_engine.h  exports.h  partitions.h  resource_name.h  sdkutils.h
include/aws/sdkutils/endpoints/: ruleset.h
include/aws/sdkutils/endpoints/private/: ruleset_types_impl.h
include/aws/sdkutils/private/: endpoints_eval_util.h  endpoints_regex.h  endpoints_ruleset_types_impl.h  endpoints_types_impl.h  endpoints_util.h
source/: aws_chunked_decoder.c  aws_profile.c  endpoints_bdd_engine.c  endpoints_bdd_loader.c  endpoints_eval_util.c  endpoints_regex.c  endpoints_rule_engine.c  endpoints_ruleset.c  endpoints_ruleset_types_impl.c  endpoints_standard_lib.c  endpoints_types_impl.c  endpoints_util.c  partitions.c  partitions_bytecode_loader.c  resource_name.c  sdkutils.c
source/endpoints/: ruleset.c  ruleset_types_impl.c
tests/: CMakeLists.txt  aws_chunked_decoder_test_vectors.inc  aws_chunked_decoder_tests.c  aws_endpoints_ruleset_tests.c  aws_profile_parser_tests.c  aws_profile_tests.c  endpoint_bdd_tests.c  endpoint_regex_tests.c  endpoints_bdd_loader_tests.c  endpoints_eval_util_tests.c  endpoints_regex_tests.c  endpoints_rule_engine_tests.c  endpoints_ruleset_tests.c  endpoints_util_tests.c  partitions_bytecode_loader_tests.c  resource_name_tests.c  sdkutils_test.c
tests/fuzz/: fuzz_chunked_decoder_multi_split.c  fuzz_chunked_decoder_random.c  fuzz_chunked_decoder_split.c
tests/resources/: bdd_test.json  object_condition_ruleset.json  partitions.json  sample_ruleset.json  simple_bdd_model.json
tests/resources/aws_chunked_decoder/: README.md  aws_chunked_decode_tests.json  generate_test_vectors.py
tests/resources/malformed-rules/: no_default_on_required.json
tests/resources/test-cases/: aws-region.json  custom_object_condition.json  partition-fn.json  string_array.json
tests/resources/valid-rules/: string_array.json
